# AIparameter

./: README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  run.py  setup.py  test_basic.py
.claude/: settings.local.json
backtest/: __init__.py  backtest_engine.py  enhanced_backtest_engine.py
data/: __init__.py  data_fetcher.py
indicators/: __init__.py  technical_indicators.py
optimization/: __init__.py  optimizer.py  param_evaluator.py  simple_optimizer.py
risk_management/: risk_manager.py
utils/: project_utils.py
