[project]
name = "aiparameter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.17.63",
    "deap>=1.4.3",
    "empyrical>=0.5.5",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "ta>=0.11.0",
    "ta-lib>=0.6.7",
    "tqdm>=4.67.1",
]
